deployment/console-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-backend
  labels:
    app.kubernetes.io/component: console-backend
    app.kubernetes.io/name: console-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: console-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: console-backend
    spec:
      serviceAccountName: console-backend
      containers:
      - name: console-backend
        image: quay.io/securesign/rhtas-console@sha256:75966d60ed709af33efd48c53b96ea7b2fcd4608f90ccc56885bf224e34b55f5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
