deployment/console-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-db
  labels:
    app.kubernetes.io/component: console-db
    app.kubernetes.io/name: console-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: console-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: console-db
    spec:
      serviceAccountName: console-db
      containers:
      - name: console-db
        image: registry.redhat.io/rhel9/mariadb-105@sha256:050dd5a7a32395b73b8680570e967e55050b152727412fdd73a25d8816e62d53
        imagePullPolicy: IfNotPresent
        command: ["run-mysqld"]
        ports:
        - containerPort: 3306
          name: mysql
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - mariadb-admin -u ${MYSQL_USER} -p${MYSQL_PASSWORD} ping
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - mariadb -u ${MYSQL_USER} -p${MYSQL_PASSWORD} -e "SELECT 1;"
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: console-mysql
