deployment/console-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-ui
  labels:
    app.kubernetes.io/component: console-ui
    app.kubernetes.io/name: console-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: console-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: console-ui
    spec:
      serviceAccountName: console-ui
      containers:
      - name: console-ui
        image: quay.io/securesign/rhtas-console-ui@sha256:c0b0b2d76548c05efadb2425baf93609cf6c40180f170cb531fbb7689a91db31
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
