deployment/console-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-backend
  labels:
    app.kubernetes.io/component: console-backend
    app.kubernetes.io/name: console-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: console-backend
  ports:
  - name: http
    port: 8080
    targetPort: http
