deployment/console-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-db
  labels:
    app.kubernetes.io/component: console-db
    app.kubernetes.io/name: console-db
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: console-db
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
